{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 27,
  "lineage": "a736e255-384f-cd5c-fd1a-c9eee48172e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f954f1fd8c8606e1",
            "arn": "arn:aws:ec2:ap-south-1:318488422619:elastic-ip/eipalloc-0f954f1fd8c8606e1",
            "association_id": "eipassoc-047d876ccd193c17a",
            "domain": "vpc",
            "id": "eipalloc-0f954f1fd8c8606e1",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0786eb246b8119c23",
            "private_dns": "ip-10-0-101-87.ap-south-1.compute.internal",
            "private_ip": "10.0.101.87",
            "public_dns": "ec2-65-1-203-109.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.203.109",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks-nat-eip"
            },
            "tags_all": {
              "Name": "eks-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318488422619:internet-gateway/igw-029d1370ce13dd51a",
            "id": "igw-029d1370ce13dd51a",
            "owner_id": "318488422619",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-013213815759a9bd9"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f954f1fd8c8606e1",
            "association_id": "eipassoc-047d876ccd193c17a",
            "connectivity_type": "public",
            "id": "nat-01cd90ebf9770796a",
            "network_interface_id": "eni-0786eb246b8119c23",
            "private_ip": "10.0.101.87",
            "public_ip": "65.1.203.109",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-009ae4169948f1168",
            "tags": {
              "Name": "eks-nat-gateway"
            },
            "tags_all": {
              "Name": "eks-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318488422619:route-table/rtb-0d38f6137a9fa90fa",
            "id": "rtb-0d38f6137a9fa90fa",
            "owner_id": "318488422619",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01cd90ebf9770796a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-013213815759a9bd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318488422619:route-table/rtb-0956c15daef60b9e4",
            "id": "rtb-0956c15daef60b9e4",
            "owner_id": "318488422619",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-029d1370ce13dd51a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-013213815759a9bd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3f88dae76be32fa",
            "route_table_id": "rtb-0d38f6137a9fa90fa",
            "subnet_id": "subnet-02239f8b0810fbed9"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a25c4f58293016e",
            "route_table_id": "rtb-0d38f6137a9fa90fa",
            "subnet_id": "subnet-037e52bc56c30d310"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0544681cb171c1478",
            "route_table_id": "rtb-0956c15daef60b9e4",
            "subnet_id": "subnet-009ae4169948f1168"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ed2e06d77a6effc",
            "route_table_id": "rtb-0956c15daef60b9e4",
            "subnet_id": "subnet-0f5378d1ac962d5fc"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318488422619:subnet/subnet-02239f8b0810fbed9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02239f8b0810fbed9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318488422619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-013213815759a9bd9"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318488422619:subnet/subnet-037e52bc56c30d310",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037e52bc56c30d310",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318488422619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-013213815759a9bd9"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318488422619:subnet/subnet-009ae4169948f1168",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009ae4169948f1168",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "318488422619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-013213815759a9bd9"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318488422619:subnet/subnet-0f5378d1ac962d5fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5378d1ac962d5fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "318488422619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-013213815759a9bd9"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318488422619:vpc/vpc-013213815759a9bd9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08317161931e37d5f",
            "default_route_table_id": "rtb-06b9d5352fb6f2941",
            "default_security_group_id": "sg-08d64e57030bc3686",
            "dhcp_options_id": "dopt-0de97a4871c6aef1c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-013213815759a9bd9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b9d5352fb6f2941",
            "owner_id": "318488422619",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          }
        }
      ]
    }
  ]
}